Improve the appearance of .node-course .webform-client-form  - make disabled/readonly .form-control itemss a lighter colour than the    Cancel button to avoid any confusion  - remove the vertical spacing of the hidden 'contact-existing' .form-item  - make the Price input 'bold'  - don't display the options_and_price fieldset if there is only a    .single-option

--- a/less/custom.less
+++ b/less/custom.less
@@ -706,7 +706,19 @@ body.html,
     margin-bottom: @line-height-computed;
 
     .form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
-      background-color: @slate-20;
+      background-color: @slate-10;
+    }
+
+    .form-item.webform-component--civicrm-1-contact-1-fieldset-fieldset--civicrm-1-contact-1-contact-existing {
+      margin-bottom: 0 !important;
+    }
+
+    input[placeholder="Price"] {
+      font-weight: 500;
+    }
+
+    .single-option {
+      display: none;
     }
   }
 
